--- a/README
+++ b/README
@@ -1,18 +1,18 @@
-The library works, but not as a gem.  Here's what happens when I build the gem and try to run from irb:
+In progress: I've used this library inside of Rails (see cucumber_xml project) but I'm tyring to learn how to make it a stand-alone gem that can be used independently from Rails.
+gem build xml_subset_matcher.gemspec
+sudo gem install xml_subset_matcher
 
-    master $ gem build xmlsubsetmatcher.gemspec
-    WARNING:  no rubyforge_project specified
-    WARNING:  description and summary are identical
-    Successfully built RubyGem
-    Name: xmlsubsetmatcher
-    Version: 0.0.3
-    File: xmlsubsetmatcher-0.0.3.gem
-    master $ irb
-    >> require 'rubygems'
-    => false
-    >> require 'xmlsubsetmatcher'
-    LoadError: no such file to load -- xmlsubsetmatcher
-        from /Library/Ruby/Site/1.8/rubygems/custom_require.rb:31:in `gem_original_require'
-        from /Library/Ruby/Site/1.8/rubygems/custom_require.rb:31:in `require'
-        from (irb):2
-    >> 
+master $ irb
+>> require 'xml_subset_matcher'
+=> true
+>> subset = "<root><thing>text</thing></root>"
+=> "<root><thing>text</thing></root>"
+>> superset = "<root extra='stuff'><ignorethis/><thing>text</thing></root>"
+=> "<root extra='stuff'><ignorethis/><thing>text</thing></root>"
+>> x = XmlSubsetMatcher::XmlSubsetMatcher.new(superset)
+NameError: uninitialized constant Nokogiri::XML::PARSE_RECOVER
+	from /Library/Ruby/Gems/1.8/gems/xml_subset_matcher-0.0.4/lib/xml_subset_matcher.rb:8:in `initialize'
+	from (irb):2:in `new'
+	from (irb):2
+
+weird... I changed the library to require Nokogiri, but that didn't seem to help
